# dil

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dil.toml  pyproject.toml
.github/workflows/: test.yml
dil/: cli.py  config.py  engine.py  rules.toml  ui.py
docs/: contributing.md
scripts/: extra.toml  kondo.py  refs.py
test/: README.md  fixtures.yml  harness.py  setup.py
tests/: test.py
