[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dil"
version = "0.1"
description = "Detect and prune disposable project litter"
requires-python = ">=3.11"

[project.scripts]
dil = "dil.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "ty>=0.0.17",
]

[tool.ty.src]
include = ["dil", "tests"]
respect-ignore-files = true

[tool.hatch.build.targets.sdist]
include = [
  "/dil",
  "/tests",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["dil"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test.py"]
cache_dir = "/tmp/dil-pytest-cache"
addopts = "-v"
