[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dil"
version = "0.1"
description = "Detect and prune disposable project litter"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Wyatt Brege", email = "wyatt@brege.org" }
]
requires-python = ">=3.11"
dependencies = [
  'pydantic>=2.11.0',
  'rich>=13.5.2',
]

[project.scripts]
dil = "dil.cli:main"
rules = "gen.rules:main"

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "tomlkit>=0.12.1",
  "ty>=0.0.17",
]

[tool.ty.src]
include = ["dil", "gen", "tests"]
respect-ignore-files = true

[tool.hatch.build.targets.sdist]
include = [
  "/dil",
  "/gen",
  "/tests",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["dil", "gen"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test.py"]
cache_dir = "/tmp/dil-pytest-cache"
addopts = "-v"
